# Soundcore_plasma_widget

./: README.md  TODO.md
OpenSCQ30/: Cargo.toml  justfile
OpenSCQ30/cli/: Cargo.toml
OpenSCQ30/cli/src/: cli.rs  config.rs  main.rs  parse.rs
OpenSCQ30/cli/src/cli/: device.rs  scan.rs
OpenSCQ30/cli/tests/: device.rs
OpenSCQ30/lib/src/devices/soundcore/common/modules/case_battery_level/: setting_handler.rs
OpenSCQ30/lib/src/devices/soundcore/common/modules/dual_battery/: setting_handler.rs
OpenSCQ30/lib/src/devices/soundcore/common/modules/single_battery/: setting_handler.rs
OpenSCQ30/lib/src/devices/soundcore/common/modules/single_battery_level/: setting_handler.rs
widget/: com.github.soundcore.widget.plasmoid  metadata.json
widget/contents/config/: config.qml  main.xml
widget/contents/ui/: main.qml
widget/contents/ui/config/: ConfigAppearance.qml  ConfigGeneral.qml
widget/translate/: en.po  it.po  messages.sh
